# zip-inspect

./: Cargo.toml  README.md
src/: main.rs
