[package]
name = "zip-inspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
zip = "0.6.3"
reqwest = { version = "0.11.12", features = ["blocking"] }
error-chain = "0.12.4"
